@@ -6,7 +6,6 @@ import java.awt.event.KeyEvent;
 import java.awt.event.KeyListener;
 import java.awt.image.BufferStrategy;
 import java.util.ArrayList;
-import java.util.LinkedList;
 import java.util.Random;
 
 import javax.swing.JFrame;
@@ -15,13 +14,16 @@ public class Snake extends JFrame implements KeyListener {
    
     private int windowWidth = 800;
     private int windowHeight = 600;
-    private LinkedList<Point> snake;
+    private ArrayList<Point> snake;
     private ArrayList<Point> obstacles;
     private Point food;
     private int dx;
     private int dy;
-    private Random generator = new Random();    
     private int points;
+    private int level;
+    private Random randomGenerator = new Random();
+    private Point startSnakePosition;												
+    private Point startFoodPosition;
    
     public static void main(String[] args) {    	
     	new Snake();
@@ -36,66 +38,74 @@ public class Snake extends JFrame implements KeyListener {
         this.createBufferStrategy(2);   
         this.addKeyListener(this);
         
+        startSnakePosition = new Point (20 + randomGenerator.nextInt(windowWidth / 10 - 20),
+				   						20 + randomGenerator.nextInt(windowHeight / 10 - 20));
+        startFoodPosition = new Point (15 + randomGenerator.nextInt(windowWidth / 10 - 15),
+        							   15 + randomGenerator.nextInt(windowHeight / 10 - 15));
         initGame();
        
         while(true) {
             long start = System.currentTimeMillis();
             gameLoop();
-            while (System.currentTimeMillis() - start < 65 - points) {
+            while (System.currentTimeMillis() - start < 70 - level * 5) {
                  //waiting
             	 //the more points you have, the faster the snake
             }
         }
     }   
     private void initGame() {
-        snake = new LinkedList<Point>();
-        snake.addFirst(new Point(50, 30));
+        snake = new ArrayList<Point>();
+        snake.add(startSnakePosition);
         growSnake(7);
        
         obstacles = new ArrayList<Point>();
         
-        food = new Point(40, 50);
+        food = startFoodPosition;
         
         dx = 0;
         dy = 0;
-        points = 0;        
+        points = 0;
+        level = 1;
         }   
     private void gameLoop() {       
         // move the snake
         moveSnake(dx, dy);
        
         // food check
-        if(snake.getFirst().equals(food)) {
+        if(snake.get(0).equals(food)) {
         	generateFood();
         	generateObstacles(2);
             growSnake(1);
             points++;
+            if (points % 5 == 0) {
+            	level++;
+            }
         }
         
         // obstacle check
         for (Point p : obstacles) {
-			if(snake.getFirst().equals(p)) {
+			if(snake.get(0).equals(p)) {
 				initGame();
 			}
 		}
         
         // our snake can move through walls
-        if (snake.getFirst().x < 0) {
-        	snake.getFirst().x = windowWidth / 10;
+        if (snake.get(0).x < 0) {
+        	snake.get(0).x = windowWidth / 10;
         }
-        else if (snake.getFirst().x >= windowWidth / 10) {
-        	snake.getFirst().x = 0;
+        else if (snake.get(0).x >= windowWidth / 10) {
+        	snake.get(0).x = 0;
         }
-        else if (snake.getFirst().y < 2) {
-        	snake.getFirst().y = windowHeight / 10;
+        else if (snake.get(0).y < 2) {
+        	snake.get(0).y = windowHeight / 10;
         }
-        else if (snake.getFirst().y >= windowHeight / 10) {
-        	snake.getFirst().y = 2;
+        else if (snake.get(0).y >= windowHeight / 10) {
+        	snake.get(0).y = 2;
         }
        
         // check if the snake has hit itself
         for(int n = 1; n < snake.size(); n++) {
-            if(snake.getFirst().equals(snake.get(n))) {
+            if(snake.get(0).equals(snake.get(n))) {
                 initGame();
             }
         }       
@@ -115,10 +125,10 @@ public class Snake extends JFrame implements KeyListener {
             g.fillRect(0, 0, windowWidth, windowHeight);
             
             // drawing
-            drawSnake(g);
             drawObstacles(g);
             drawFood(g);
-            drawPoints(g);
+            drawSnake(g);                    
+            drawScore(g);
         } finally {
             g.dispose();
         }
@@ -139,19 +149,19 @@ public class Snake extends JFrame implements KeyListener {
         for (int n = snake.size() - 1; n >= 1; n--) {
             snake.get(n).setLocation(snake.get(n-1));
         }
-        snake.getFirst().x += dx;
-        snake.getFirst().y += dy;
+        snake.get(0).x += dx;
+        snake.get(0).y += dy;
     }
    
     private void growSnake (int count) {
         for (int i = 0; i < count; i++) {
-            snake.add(new Point(snake.getLast()));
+            snake.add(new Point(snake.get(snake.size() - 1)));
         }
     }
    
     private void generateFood() {
-        food.x = 8 + generator.nextInt(windowWidth / 10 - 8);
-        food.y = 8 + generator.nextInt(windowHeight / 10 - 8);
+    	food = new Point(8 + randomGenerator.nextInt(windowWidth / 10 - 8),
+						8 + randomGenerator.nextInt(windowHeight / 10 - 8));
     }
    
     private void drawFood(Graphics g) {
@@ -160,7 +170,8 @@ public class Snake extends JFrame implements KeyListener {
     }
     private void generateObstacles(int count) {
     	for (int i = 0; i < count; i++) {
-    		obstacles.add(new Point(4 + generator.nextInt(windowWidth / 10 - 4), 4 + generator.nextInt(windowHeight / 10 - 4)));
+    		obstacles.add(new Point(4 + randomGenerator.nextInt(windowWidth / 10 - 4),
+    								4 + randomGenerator.nextInt(windowHeight / 10 - 4)));
     	}
     }
     private void drawObstacles(Graphics g) {
@@ -169,9 +180,10 @@ public class Snake extends JFrame implements KeyListener {
         g.fillRect(p.x*10, p.y*10, 10, 10);
     	}
     }
-    private void drawPoints(Graphics g) {
+    private void drawScore (Graphics g) {
         g.setColor(Color.LIGHT_GRAY);
-        g.drawString("Total score: " + points, 710, 40);
+        g.drawString("Total score: " + points, 718, 40);
+        g.drawString("Level: " + level, 720, 52);
     }
     @Override
     public void keyPressed(KeyEvent e) {
